# zcode

./: .env.example  .gitignore  README.md  pyproject.toml
src/zcode/: __init__.py  __main__.py  agent.py  cli.py  shell.py  tools.py
